src/style.scss
@import "variables";

body {
	position: relative;
	background-color: $brand-background;
	font-family: $font-primary;

	&::after {
		content: "";
		display: block;
		width: 100%;
		height: 150px;
		margin: 0 auto;
		background-image: url(#{$assets-url}/images/theatre-seats-004.png);
		background-repeat: repeat-x;
		background-size: auto 100%;
		background-position: bottom;

		@media (min-width: $screen-sm-min) {
			height: 200px;
		}

		@media (min-width: $screen-md-min) {
			height: 250px;
		}

		@media (min-width: $screen-lg-min) {
			height: 300px;
		}

	}

}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: $font-secondary;
	font-weight: 600;
}

// Site Header, to include the top of the stage curtains
.site-header {

	.site & {
		background-image: none;
		background-color: $brand-secondary;

		@media (min-width: $screen-sm-min) {
			background-color: $brand-primary-light;
		}

	}

	h1,
	h2 {
		text-transform: uppercase;
	}

	h1 {
		height: 3.5rem;
		margin: 0 auto;
		font-size: 0;
		padding: 0;
		font-weight: 600;
		font-variant: normal;
		font-style: normal;
		font-family: $font-secondary;

		&::before {
			content: "WordCamp ";
			color: $logo;
		}

		&::after {
			content: "London 2017";
		}

		&::before,
		&::after {
			font-size: 1.5rem;

			@media (min-width: $screen-sm-min) {
				font-size: 2rem;
			}

			@media (min-width: $screen-md-min) {
				font-size: 3rem;
			}

			@media (min-width: $screen-lg-min) {
				font-size: 3.5rem;
			}
		}
	}

	h2 {
		font-weight: 400;
		font-variant: normal;
		font-style: normal;
		font-size: 1rem;
		font-family: $font-secondary;
		color: $white;

		// This needs to be done to ensure the date shows on mobile
		clip: initial;
		position: relative;

		@media (min-width: $screen-md-min) {
			font-size: 1.5rem;
		}

		@media (min-width: $screen-lg-min) {
			font-size: 1.75rem;
		}

	}

	.home-link {
		position: relative;
		background-color: transparent;
		max-width: none;
		text-align: center;
		z-index: 1;
		padding: 20px;
		color: $white;

		&::before {
			content: "";
			position: relative;
			display: inline-block;
			width: 60px;
			height: 60px;
			margin: 0 auto 10px;
			background-image: url(#{$assets-url}/images/wordcamp-website-logo-002.png);
			background-repeat: no-repeat;
			background-size: 100%;

			@media (min-width: $screen-sm-min) {
				margin-top: 70px;
				margin-bottom: 0;
			}

			@media (min-width: $screen-md-min) {
				margin-top: 60px;
			}

			@media (min-width: $screen-lg-min) {
				margin-top: 45px;
				width: 70px;
				height: 70px;
			}

			@media (min-width: $screen-xl-min) {
				margin-top: 35px;
			}

		}
	}

	// Hiding the search in the navigation bar, as it will be included in the sidebar instead.
	.search-form {
		display: none;
	}

	.menu-toggle {
		color: $white;
	}

	.navbar {
		position: relative;
		padding-top: 5px;
		padding-bottom: 5px;
		background-color: $brand-dark;

		a {
			color: $white;
			text-transform: uppercase;
		}

	}

	.nav-menu {
		padding: 0;
		text-align: center;
	}

	// The curtain tops are currently only set to display on larger screen sizes.
	@media (min-width: $screen-sm-min) {

		// Set the left and right curtains
		&::before,
		&::after {
			content: "";
			position: absolute;
			top: 0;
			display: block;
			height: 240px;
			width: 600px;
			background-size: 100%;
			background-repeat: no-repeat;
			z-index: 2;
		}

		&::before {
			left: 0;
			background-image: url(#{$assets-url}/images/curtain-left-no-shadow-001.png);
		}

		&::after {
			right: 0;
			background-image: url(#{$assets-url}/images/curtain-right-no-shadow-001.png);
		}

		// Now that we are showing the curtain tops, we need to tuck the navigation underneath them
		.navbar {
			position: relative;
			margin-top: -20px;
			padding-top: 25px;
		}

		// And prevent the navigation links from spreading underneath the curtain tops.
		.main-navigation {
			max-width: none;
			padding-left: 160px;
			padding-right: 160px;
		}

		// And lastly we need to set a background to show inbetween the curtain tops
		.home-link {

			padding: 0 20px;

			&::after {
				content: "";
				position: absolute;
				top: 0;
				right: 60px;
				bottom: 0;
				left: 60px;
				display: block;
				background-color: $brand-secondary;
				z-index: -1;
			}

		}

		// Change the curtain tops out for those with a shadow now that we have more room
		@media (min-width: $screen-lg-min) {
			&::before {
				background-image: url(#{$assets-url}/images/curtain-left-002.png);
			}

			&::after {
				background-image: url(#{$assets-url}/images/curtain-right-002.png);
			}
		}

	}

}

// Main page container
.site {

	border: 0;

	// Showing the curtains
	@media (min-width: $screen-md-min) {

		.site-main {

			padding: 0 160px;

			&::before,
			&::after {
				content: "";
				position: absolute;
				top: 0;
				bottom: 0;
				display: block;
				width: 165px;
				background-size: 100%;
				background-repeat: repeat-y;
			}

			&::before {
				left: 0;
				background-image: url(#{$assets-url}/images/curtain-drape-left-002.png);
			}

			&::after {
				right: 0;
				background-image: url(#{$assets-url}/images/curtain-drape-right-002.png);
			}

		}

		.site-footer {

			position: relative;

			&::before,
			&::after {
				content: "";
				position: absolute;
				top: 0;
				bottom: 0;
				display: block;
				width: 165px;
				background-size: 100%;
				background-repeat: repeat-y;
			}

			&::before {
				left: 0;
				background-image: url(#{$assets-url}/images/curtain-bottom-left-002.png);
				background-repeat: no-repeat;
			}

			&::after {
				right: 0;
				background-image: url(#{$assets-url}/images/curtain-bottom-right-002.png);
				background-repeat: no-repeat;
			}

		}

	}

	.entry-title {
		font-weight: 600;
	}

}

// Styling the peculiar sidebar in the theme..
.site-main {

	.sidebar-container {
		left: 0;
		right: 0;
	}

	.sidebar-inner {
		max-width: none;

		@media (min-width: $screen-md-min) {
			padding: 0 180px;
		}

		.widget-area {
			margin-right: 0;

			@media (min-width: $screen-lg-min) {
				margin-right: 40px;
			}

			@media (min-width: $screen-xxl-min) {
				margin-right: 60px;
			}

		}

	}

	.widget-title {
		font-family: $font-secondary;
	}

}

// Site footer, to include the seats
.site-footer {

	background-color: $brand-background;

	.sidebar-container {
		background: transparent;
		text-align: center;
	}

	// Have had to be more specific here to override some twentythirteen styles.
	.sidebar & .widget-area {
		max-width: 600px;
		left: auto;

		@media (min-width: $screen-lg-min) {
			max-width: 840px;
		}

		@media (min-width: $screen-xl-min) {
			max-width: 940px;
		}

		@media (min-width: $screen-xxl-min) {
			max-width: 1040px;
		}

	}

	.widget {
		position: relative !important;
		left: auto !important;
		top: auto !important;
		width: 100% !important;
		margin: 0 auto;
		float: none;
	}

	.widget_text {
		margin: 10px 0;
		text-align: center;
		color: $white;

		// Only add the curtains on screens that are large enough
		@media (min-width: $screen-sm-min) {

			padding: 20px 20px 60px;

			&::before,
			&::after {
				content: "";
				position: absolute;
				top: 0;
				display: block;
				width: 80px;
				height: 8px;
				background-size: 100%;
				background-repeat: repeat-y;
			}

			&::before {
				left: 0;
				background-image: url(#{$assets-url}/images/text-widget-top-left-001.png);
				background-repeat: no-repeat;
			}

			&::after {
				right: 0;
				background-image: url(#{$assets-url}/images/text-widget-top-right-001.png);
				background-repeat: no-repeat;
			}

		}

		.widget-title {
			position: absolute;
			top: 25px;
			left: 0;
			right: 0;
		}

		a {
			color: $white;
		}

	}

	.textwidget {
		padding: 40px 20px;
		background-color: $brand-secondary;

		// Only add the curtains on screens that are large enough
		@media (min-width: $screen-sm-min) {

			&::before,
			&::after {
				content: "";
				position: absolute;
				display: block;
				bottom: 60px;
				width: 80px;
				background-size: 100%;
				background-repeat: repeat-y;
			}

			&::before {
				left: 0;
				top: 6px;
				background-image: url(#{$assets-url}/images/text-widget-left-001.png);
			}

			&::after {
				right: 0;
				top: 6px;
				background-image: url(#{$assets-url}/images/text-widget-right-001.png);
			}

		}

	}

	.curtains-bottom {

		@media (min-width: $screen-sm-min) {

			&::before,
			&::after {
				content: "";
				position: absolute;
				display: block;
				bottom: 0;
				width: 80px;
				height: 60px;
				background-size: 100%;
				background-repeat: no-repeat;
			}

			&::before {
				left: 0;
				background-image: url(#{$assets-url}/images/text-widget-bottom-left-001.png);
			}

			&::after {
				right: 0;
				background-image: url(#{$assets-url}/images/text-widget-bottom-right-001.png);
			}

		}

	}

	.site-info {
		min-height: 110px;

		a {
			display: none;
		}
	}

}

.widget {
	background-color: $white;
	border: 4px double $brand-dark;
}

[type=submit] {
	background: $brand-primary;
	font-weight: 800;
	border: 1px solid $logo;
	color: $logo;

	&:hover,
	&:focus,
	&:active {
		background: $logo;
		color: $brand-primary;
	}

}

.nav-menu .sub-menu,
.nav-menu .children {
	text-align: left;
}

.nav-menu ul a:hover,
.nav-menu ul ul a:hover,
.nav-menu ul a:focus,
.nav-menu ul ul a:focus {
	background: $brand-primary;
}

.jetpack_subscription_widget form p:last-of-type {
	margin: 0;
}

.comment-respond {
	background: $white;
	border-top: 4px double $logo;
}

.page-header {
	background-color: $white;
}

.table--striped {

	thead th {
		background-color: $brand-dark;
		color: $white;
		padding: 6px 10px 6px 0;
	}

	tbody {
		tr:nth-child(odd) {
			background-color: $faded;
		}
	}

}

